<resources>
    <string name="app_name">NavigationView</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>
    <string name="item4">item4</string>
    <string name="item">item</string>
    <string name="item10">item10</string>
    <string name="your_app_must_be_here">Your app must be here..</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item_menu">Item Menu</string>
    <string name="this_is_header">This is Header</string>
</resources>
