<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/item1"  android:id="@+id/item1"> </item>
        <item android:title="@string/item2"  android:id="@+id/item2"> </item>
        <item android:title="@string/item3"  android:id="@+id/item3"> </item>
        <item android:title="@string/item4"  android:id="@+id/item4"> </item>
    </group>

    <item android:title="@string/item_menu">
        <menu>

            <item android:title="@string/item"
                android:id="@+id/item">
            </item>

            <item android:title="@string/item10"
                android:id="@+id/item10">

            </item>

        </menu>


    </item>


</menu>